[package]
name = "ch_cityhash102"
version = "0.1.0"
edition = "2021"
description = "ClickHouse CityHash implementation"
readme = "README.md"
keywords = ["clickhouse", "cityhash"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
criterion = "0.3.5"
fake = "2.4"
rand = "0.8"

[[bench]]
name = "bench"
harness = false
