[package]
name = "ch_cityhash102"
version = "0.1.0"
edition = "2021"
description = "ClickHouse CityHash implementation"
readme = "README.md"
keywords = ["clickhouse", "cityhash"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
test_with_clickhouse_driver = [ "clickhouse-driver-cth", "clickhouse-driver-cthrs" ]

[dependencies]
# These are actually dev-dependencies, but Cargo.toml does not allow
# optional dev deps.
clickhouse-driver-cth = { path = "../clickhouse_driver/cityhash", optional = true }
clickhouse-driver-cthrs = { path = "../clickhouse_driver/cityhash-rs", optional = true }

[dev-dependencies]
criterion = "0.3.5"
fake = "2.4"
quickcheck = "1"
quickcheck_macros = "1"
rand = "0.8"

[[bench]]
name = "bench"
harness = false
